# bitum

./: .gitignore  COMPRESSION.md  LICENSE  NOTES.md  README.md  TODO.md  pyproject.toml
.github/workflows/: tests.yml
bitum/: cli.py  constants.py  debug_cli.py  utils.py
icons/: bad_box-16x16.lpe  cardboard_box-64x64-v2.lpe  cardboard_box-64x64.lpe  cardboard_box_with_tar-64x64.lpe  kinda_bad_box-64x64.lpe  tarbarrel.acorn  tarbox-20231123-155629.piskel  tarbox-64x64.lpe
scripts/: dirwalk.py
scripts/dirwalk-go/: README.md  dirwalk.go  go.mod
test/: test_full_cli.sh  test_full_cli_local.sh
test/files/: cake-recipe.txt
